# camrahd-ai

./: .gitignore  LICENSE  Readme.md  pyproject.toml
.github/workflows/: ci.yml
.memory/: current_session  memory.db  memory.db-shm  memory.db-wal
Dharmas_claude/: README.md  config.yaml  main.py  mcp_servers.json  test.py
Dharmas_claude/agent/: factory.py  orchestrator.py  tools.py
Dharmas_claude/context/indexers/: code_parser.py  semantic_chroma.py
Dharmas_claude/mcp/: mcp_config.py
Dharmas_claude/memory/: short_term.py
Dharmas_claude/skills/: skill_tools.py
Dharmas_claude/tools/: filesystem_tools.py
camrahd_ai/: README.md  config.py  config.yaml  main.py  mcp_servers.json  test.py
camrahd_ai/agent/: factory.py  orchestrator.py  tools.py
camrahd_ai/context/indexers/: code_parser.py  factory.py  hybrid_qdrant.py  manifest.py  semantic_chroma.py  semantic_qdrant.py
camrahd_ai/context/retrievers/: factory.py  hybrid_qdrant.py  semantic_chroma.py  semantic_qdrant.py
camrahd_ai/llm/: factory.py
camrahd_ai/mcp/: mcp_client.py  mcp_config.py
camrahd_ai/memory/: session.py  short_term.py
camrahd_ai/observability/: logger.py  usage.py
camrahd_ai/skills/: registry.py  skill_tools.py
camrahd_ai/tools/: approval.py  filesystem_tools.py  terminal_tools.py
tests/: test_code_parser.py  test_config.py  test_manifest.py  test_session.py  test_terminal_tools.py  test_usage.py
