[project]
name = "camrahd-ai"
version = "0.1.0"
description = "RAG-powered terminal code assistant: code-aware retrieval, agentic tools, persistent sessions, and MCP integration."
authors = [
    {name = "Dharma41",email = "dharmendrareddy2000@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "Readme.md"
requires-python = ">=3.12,<4.0"
keywords = ["cli", "rag", "code-assistant", "llm", "agent", "mcp", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.44.0,<3.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "langchain (>=1.3.11,<2.0.0)",
    "langchain-openai (>=1.3.3,<2.0.0)",
    "langchain-anthropic (>=1.4.7,<2.0.0)",
    "tree-sitter (==0.21.3)",
    "tree-sitter-languages (==1.10.2)",
    "langgraph-checkpoint-sqlite (>=3.1.0,<4.0.0)",
    "langchain-mcp-adapters (>=0.3.0,<0.4.0)",
    "typer (>=0.15.0,<1.0.0)"
]

[project.optional-dependencies]
qdrant = [
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "fastembed (>=0.8.0,<0.9.0)"
]
chroma = [
    "chromadb (>=1.5.9,<2.0.0)"
]
huggingface = [
    "langchain-huggingface (>=1.2.2,<2.0.0)"
]
ollama = [
    "langchain-ollama (>=1.0.0,<2.0.0)"
]
all = [
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "fastembed (>=0.8.0,<0.9.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)"
]

[project.urls]
Repository = "https://github.com/Dharma41/camrahd-ai"

[project.scripts]
camrahd = "camrahd_ai.main:run"

[tool.poetry]
packages = [{include = "camrahd_ai"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
